Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10843

snapshot_create fails after MGS restart

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.12.0, Lustre 2.10.5
    • Lustre 2.10.3
    • None
    • 3
    • 9223372036854775807

      If the MGS is unmounted and remount (or failed over) lctl snapshot_create fails with the following error:

      # lctl snapshot_create -F scratch -n test
      Fail to freeze barrier for scratch: No such device
      Can't create the snapshot test
      

      snapshot_destroy still works without issue.

      WORKAROUND: unmount/mount the MDT and snapshot_create will commence working again.

      NOTE: mount -o remount is insufficient

            utopiabound Nathaniel Clark
            utopiabound Nathaniel Clark
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: